--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -2,10 +2,9 @@
 
 .mainpage {
   background: linear-gradient(to bottom, #59c173, #a17fe0, #5d26c1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  margin: 0;
   width: 100%;
   overflow-x: hidden; /* Hide horizontal scrollbar */
-
+  min-height: 100%;
 
 }
 .dashboard{
@@ -43,22 +42,22 @@
 
 
 
-  .site-footer{
-    text-align: center;
-    background-color:  #6400cf;
-    height: 75px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    }
-    
-  .footer-copyright{
-      display: flex;
+    .site-footer{
+      position: relative;
+      text-align: center;
+      background-color:  #6400cf;
+      height: 100%;
+      height: 75px;
+      width:100%;
+      }
+      
+    .footer-copyright{
+      padding-top: 35px;
+      text-align: center;
       justify-content: center;
-      align-items: center;
-  
-  }
+
+    
+    }
   .bonds{
     padding-top: 50px;
     padding-bottom: 75px;
@@ -68,7 +67,6 @@
   }
   .select{
     width: 500px;
-    color: red;
   }
   .ant-slider-step{
     color: green;
@@ -88,3 +86,19 @@
   .submit-box{
     width: 300px;
   }
+.long-short-box{
+  padding-bottom: 20px;
+}
+.slider-box{
+  width: 500px;
+  font-size: 20px;
+}
+.form{
+  font-size: 20px;
+}
+.row-card{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  font-size: 20px;
+}
