--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -4,11 +4,12 @@
   background: linear-gradient(to bottom, #59c173, #a17fe0, #5d26c1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   width: 100%;
   overflow-x: hidden; /* Hide horizontal scrollbar */
-  min-height: 100%;
-
+  height: 100%;
 }
 .dashboard{
+  overflow: auto;
   padding: 50px;
+  min-height: 100%;
 }
 
     .market-container{
@@ -52,7 +53,8 @@
       }
       
     .footer-copyright{
-      padding-top: 35px;
+      font-size: 20px;
+      padding-top: 30px;
       text-align: center;
       justify-content: center;
 
@@ -101,4 +103,10 @@
   display: flex;
   flex-direction: row;
   font-size: 20px;
+}
+.horizontal-cards{
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+
 }
