--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -83,7 +83,8 @@
     font-weight: 600;
   }
   .card-leverage-slider{
-    padding-top: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   .submit-box{
     width: 300px;
@@ -108,5 +109,12 @@
   flex-direction: row;
   display: flex;
   justify-content: center;
+
+}
+.asset{
+  padding-right: 20px;
+}
+.avatar{
+  float: right;
 
 }
